--- a/.env-server
+++ b/.env-server
@@ -1,11 +1,11 @@
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:lynZMRi31PruCmYuNGOtrTGVzW9g582PrNtnCq0XZbg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=DB_HOST=ec2-52-32-173-149.us-west-2.compute.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=userdata
 DB_USERNAME=root
